blog/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 # number of instances you want
  selector:
    matchLabels: # just key value pair to match a lable
      app: query
  template:
    metadata:
      labels:
        app: query # this works together with the metadata
    spec:
      containers:
        - name: query
          image: hhsu15/query:latest
          # imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: query-srv # thi will serve as the DNS name, within the node
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
